# Coursework

Matrix/: CMakeLists.txt  Makefile  Matrix.cpp  Matrix.h  greet_ext.cpp  test.py
Release/: controller.kv  kursach.py
